--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
-    "user_id_list": ["1669879400"],
+    "user_id_list": ["3810104105", "2254597797", "6246287987"],
     "filter": 1,
-    "since_date": "2018-01-01",
+    "since_date": 30,
     "write_mode": ["csv"],
     "original_pic_download": 1,
 	"retweet_pic_download": 0,
     "original_video_download": 1,
-	"retweet_video_download": 0,
+    "retweet_video_download": 0,
     "mysql_config": {
         "host": "localhost",
         "port": 3306,
